z-index 10 applied for correcting avatar overflow in the room show. questions-controller removed, because it was not used

--- a/app/assets/stylesheets/pages/_ff_roomShow.scss
+++ b/app/assets/stylesheets/pages/_ff_roomShow.scss
@@ -12,6 +12,8 @@
   width: 95px;
   height: 95px;
   border-radius: 50%;
+  position: relative;
+  z-index: 10;
 }
 
 .placeholder-avatar {
@@ -31,7 +33,6 @@
   display: flex;
   justify-content: center;
   margin: 0px 20px;
-
 }
 
 .flex-loader {
